# spatialos-sdk-rs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md  Spatial.toml  azure-pipelines-template.yaml  azure-pipelines.yml  build.rs
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: premerge.yml
cargo-spatial/: Cargo.toml
cargo-spatial-package-downloader/: Cargo.toml
cargo-spatial-package-downloader/src/: lib.rs
cargo-spatial/src/: codegen.rs  config.rs  download.rs  errors.rs  lib.rs  local.rs  main.rs  opt.rs
ci/: build-test.sh  build.sh  install.sh  lint.sh
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  getting-started.md
examples/project-example/: .gitignore  setup.sh
examples/project-example/spatial-os/: world.json
project-example/: .gitignore  Cargo.toml  Spatial.toml  generated.rs  rust_client.json  rust_worker.json  spatialos.json  world.json
project-example/schema/: example.schema  test.schema
project-example/snapshots/: default.snapshot
project-example/src/: connection_handler.rs  generated.rs  main.rs  mod.rs  opt.rs  specs_example.rs
spatialos-sdk/: .gitignore  Cargo.toml  build.rs  wrapper.h
spatialos-sdk-code-generator/: Cargo.toml
spatialos-sdk-code-generator/data/: test.bundle.json  test.sb.json
spatialos-sdk-code-generator/src/: bin.rs  generated_code.tt.rs  generated_code_mod.tt.rs  generator.rs  lib.rs  schema_bundle.rs  schemabundle.rs
spatialos-sdk-sys/: Cargo.toml  build.rs
spatialos-sdk-sys/src/: lib.rs  worker.rs
spatialos-sdk-tools/: Cargo.toml
spatialos-sdk-tools/src/codegen/: main.rs
spatialos-sdk-tools/src/download_sdk/: main.rs
spatialos-sdk-tools/src/generate_bindings/: main.rs
spatialos-sdk-tools/src/setup/: main.rs
spatialos-sdk/examples/: generate_snapshot.rs  manual_serialization.rs
spatialos-sdk/examples/project-example/: .gitignore  Cargo.toml  codegen.sh  generated_code.rs  generated_code_example.rs  main.rs  rust_worker.json  setup.rs  setup.sh  worker_config.json
spatialos-sdk/examples/project-example/lib/: argument_parsing.rs  connection_handler.rs  mod.rs  opt.rs
spatialos-sdk/examples/project-example/spatial-os/: spatialos.json  world.json
spatialos-sdk/examples/project-example/spatial-os/schema/: example.schema
spatialos-sdk/examples/project-example/spatial-os/snapshots/: default.snapshot
spatialos-sdk/examples/project-example/spatialos/: .gitignore  spatialos.json  world.json
spatialos-sdk/examples/project-example/spatialos/schema/: example.schema
spatialos-sdk/resources/: bad_bundle  good_bundle
spatialos-sdk/src/: commands.rs  component.rs  connection.rs  entity.rs  entity_builder.rs  lib.rs  locator.rs  logging.rs  metrics.rs  op.rs  parameters.rs  ptr.rs  query.rs  schema.rs  snapshot.rs
spatialos-sdk/src/schema/: bundle.rs  collections.rs  command_request.rs  command_response.rs  component_data.rs  component_update.rs  generic_data.rs  macros.rs  object.rs  owned.rs  primitives.rs  ptr.rs
spatialos-sdk/src/worker/: alpha.rs  alpha_locator.rs  commands.rs  component.rs  connection.rs  entity.rs  entity_builder.rs  entity_snapshot.rs  handle.rs  locator.rs  logging.rs  metrics.rs  mod.rs  op.rs  parameters.rs  query.rs  schema.rs  snapshot.rs  utils.rs  view.rs  vtable.rs  worker_future.rs
spatialos-sdk/src/worker/core/: commands.rs  component.rs  connection.rs  metrics.rs  mod.rs  op.rs  parameters.rs  query.rs
spatialos-sdk/src/worker/internal/: bindings.rs  mod.rs  schema.rs  utils.rs  worker_sdk_conversion.rs
spatialos-sdk/src/worker/schema/: bundle.rs  collections.rs  command_request.rs  command_response.rs  component_data.rs  component_update.rs  float_ord.rs  generic_data.rs  macros.rs  object.rs  owned.rs  primitives.rs  ptr.rs  update.rs
spatialos-sdk/tests/: compiletest.rs  manual_serialization.rs
spatialos-sdk/tests/compile_fail/: add_vec_field.rs  entity_add_send.rs  schema_add_list.rs  snapshot_write_mut.rs
spatialos-sdk/tests/compile_fail/schema/: component_data_sync.rs
src/worker/: entity_id.rs  internal.rs  mod.rs  op.rs  request_id.rs
src/worker/core/: authority.rs  commands.rs  component.rs  connection.rs  entity_id.rs  entity_snapshot.rs  internal.rs  metrics.rs  mod.rs  op.rs  parameters.rs  request_id.rs  snapshot.rs  vtable.rs
test-suite/: .gitignore  Cargo.toml  Spatial.toml
test-suite/schema/: enum_test.schema
test-suite/src/: entity_builder_tests.rs  lib.rs  snapshot_integration_tests.rs
