[package]
name = "cargo-spatial"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>", "Jamie Brynes <jamiebrynes7@gmail.com>"]
edition = "2018"

[dependencies]
glob = "0.2.11"
lazy_static = "1.3"
log = "0.4.1"
rand = "0.6.5"
reqwest = "0.9.13"
simplelog = "0.5.3"
serde = { version = "1.0.38", features = ["derive"] }
serde_json = "1.0.38"
spatialos-sdk-code-generator = { path = "../spatialos-sdk-code-generator" }
structopt = "0.2.14"
tap = "0.3.1"
tempfile = "3.0"
toml = "0.4.10"
zip = "0.5.2"
