[package]
name = "cargo-spatial"
version = "0.1.1"
authors = [
    "David LeGare <dlegare.1001@gmail.com>",
    "David Avedissian <git@dga.dev>",
    "Jamie Brynes <jamiebrynes7@gmail.com>"
]
edition = "2018"

[dependencies]
glob = "0.3"
lazy_static = "1.3"
log = "0.4.1"
rand = "0.7"
reqwest = "0.9.13"
simplelog = "0.7"
serde = { version = "1.0.38", features = ["derive"] }
serde_json = "1.0.38"
spatialos-sdk-code-generator = { path = "../spatialos-sdk-code-generator" }
structopt = "0.3"
tap = "0.4"
tempfile = "3.0"
toml = "0.5"
