[package]
name = "cargo-spatial"
version = "0.1.2"
authors = [
    "David LeGare <dlegare.1001@gmail.com>",
    "David Avedissian <git@dga.dev>",
    "Jamie Brynes <jamiebrynes7@gmail.com>"
]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
cargo-spatial-package-downloader = { path = "../cargo-spatial-package-downloader" }
log = "0.4.1"
rand = "0.8"
reqwest = { version = "0.10.0", features = ["blocking"] }
simplelog = "0.8"
serde = { version = "1.0.38", features = ["derive"] }
serde_json = "1.0.38"
spatialos-sdk-code-generator = { path = "../spatialos-sdk-code-generator" }
structopt = "0.3"
tempfile = "3.0"
toml = "0.5"
