[package]
name = "project-example"
version = "0.0.0"
authors = [
    "Jamie Brynes <jamiebrynes7@gmail.com>",
    "David Avedissian <git@dga.dev>",
]
edition = "2018"

[dependencies]
spatialos-sdk = { path = "../spatialos-sdk"}
futures = "0.3.1"
uuid = { version = "0.8", features = ["v4"] }
structopt = "0.3"
rand = "0.7"
tap = "0.4"
