[package]
name = "spatialos-sdk-code-generator"
version = "0.1.0"
authors = ["David Avedissian <git@dga.dev>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
t4rust-derive = "0.2.0"
heck = "0.3.1"

[lib]
name = "spatialos_sdk_code_generator"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/bin.rs"
