[package]
name = "spatialos-sdk-sys"
version = "14.8.0"
authors = [
    "David Avedissian <git@dga.dev>",
    "Jamie Brynes <jamiebrynes7@gmail.com>"
]
edition = "2018"
links = "worker"
build = "build.rs"

[dependencies]

[build-dependencies]
cargo-spatial-package-downloader = { path = "../cargo-spatial-package-downloader" }
