[package]
name = "spatialos-sdk-tools"
version = "0.0.0"
authors = ["Jamie Brynes <jamiebrynes7@gmail.com>"]
edition = "2018"

[[bin]]
name = "download_sdk"
path = "src/download_sdk/main.rs"

[[bin]]
name = "generate_bindings"
path = "src/generate_bindings/main.rs"

[[bin]]
name = "cargo-spatial-codegen"
path = "src/codegen/main.rs"

[dependencies]
zip = "0.5"
clap = "2.32.0"
glob = "0.2"
bindgen = "0.42"
structopt = "0.2.14"
tap = "0.3.0"
fs_extra = "1.1.0"
log = "0.4.1"
simplelog = "0.5.3"
spatialos-sdk-code-generator = { path = "../spatialos-sdk-code-generator" }
