[package]
name = "spatialos-sdk"
version = "0.0.0"
authors = [
    "Jamie Brynes <jamiebrynes7@gmail.com>",
    "David Avedissian <git@dga.dev>"
]
edition = "2018"

[dependencies]
derivative = "1.0.2"
spatialos-sdk-sys = { path = "../spatialos-sdk-sys"}
futures = "0.1"
inventory = "0.1"
lazy_static = "1.3"

[dev-dependencies]
static_assertions = "1.1.0"
structopt = "0.3"
tap="0.4"
